kubernetes/spring-boot-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-project-deployment
  namespace: devops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-spring-boot-project
  template:
    metadata:
      labels:
        app: devops-spring-boot-project
    spec:
      containers:
        - name: devops-project
          image: viktorija23/kiii-project:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
