kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-project-ingress
  namespace: devops-project
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: spring.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-project-service
                port:
                  number: 80
